fix: schema prisma

--- a/olimpic/.env
+++ b/olimpic/.env
@@ -6,3 +6,4 @@
 
 DATABASE_URL="mongodb+srv://root:randompassword@cluster0.ab1cd.mongodb.net/mydb?retryWrites=true&w=majority"
 NODE_ENV="production"
+SECRET_PASS="aoisjd91j2139@as0-9i"
